react with translate

--- a/src/translations/he/translation.json
+++ b/src/translations/he/translation.json
@@ -4,6 +4,7 @@
     "keyWithCount": "Anne has bought {{count}} book",
     "keyWithCount_plural": "Anne has bought {{count}} books",
     "date_format_two": "{{date, DD-MM-YYYY}}",
-    "number_format": "There are {{number, ','}} books in the shop."
+    "number_format": "There are {{number, ','}} books in the shop.",
+    "sigin":"הכנס"
   }
   
