--- a/src/translations/he/translation.json
+++ b/src/translations/he/translation.json
@@ -5,25 +5,48 @@
      "login.business":"מזהה עסק",
      "login.userName":"שם משתמש",
      "login.password":"סיסמה",
-    "siderbar.customer-search":"איתור לקוח" ,
-     "siderBar.customer-details":"פרטי לקוח",
+    "siderbar.customerSearch":"איתור לקוח" ,
+     "siderBar.customerDetails":"פרטי לקוח",
      "siderbar.contact":"יצירת קשר",
-     "siderbar.representatives-or-involved-parties":"נציגים/מעורבים",
+     "siderbar.representativesOrInvolvedParties":"נציגים/מעורבים",
      "siderbar.obligo":"אובליגו",
      "siderbar.security":"בטחון",
-     "siderbar.price-list":"מחירון",
-     "siderbar.bank-accounts":"חשבונות בנק" ,
+     "siderbar.priceList":"מחירון",
+     "siderbar.bankAccounts":"חשבונות בנק" ,
      "siderbar.loans":"הלוואות",
      "siderbar.documents":"מסמכים",
-     "siderbar.money-laundering":"הלבנת הון",
-     "siderbar.concentration-of-actions":"ריכוז פעולות",
-     "siderbar.log-changes":"לוג שינוים",
-     "customer.first-name":"שם פרטי",
-     "customer.last-name":"שם משפחה",
-     "customer.Customer-status":"מעמד לקוח",
+     "siderbar.moneyLaundering":"הלבנת הון",
+     "siderbar.concentrationOfActions":"ריכוז פעולות",
+     "siderbar.logChanges":"לוג שינוים",
+     "createCustomer":"צור לקוח",
+     "customerStatus":"סטטוס לקוח",
+     "customerLock":"נעילת לקוח",
+     "firstName":"שם פרטי",
+     "lastName":"שם משפחה",
      "male":"זכר",
      "female":"נקבה",
-      "other":"אחר"
+     "gander":"מין",
+      "other":"אחר",
+      "admin":"מנהל",
+      "user":"משתמש",
+      "note":"הערה",
+      "editing":"לערוך",
+      "deletion":"מחיקה",
+      "save":"שמירה",
+      "dateOfBirth":"תאריך לידה",
+      "idNumber":"מספר זהות",
+      "middleName":"שם אמצעי",
+      "customerNumber":"לקוח מספר",
+      "customerDetails":"פרטי לקוח",
+      "personalDetails":"פרטים אישיים",
+      "othercustomerCondition":"מעמד לקוח אחר",
+      "customerCondition":"מעמד לקוח",
+      "customerType":"סוג לקוח",
+      "customers":"לקוחות"
+      
+
+      
+
      }
  
   
