--- a/src/translations/he/translation.json
+++ b/src/translations/he/translation.json
@@ -43,9 +43,10 @@
       "customerCondition":"מעמד לקוח",
       "customerType":"סוג לקוח",
       "customers":"לקוחות",
-      "viewNoteWhenPerformingAnAction":"הצגת הערה בעת ביצוע פעולה",
-      "busyFieldOrGeneralIndustry":"תחום עסוק/ענף כללי"
-      
+      "viewNoteWhenPerformingAction":"הצגת הערה בעת ביצוע פעולה",
+      "busyFieldOrGeneralIndustry":"תחום עסוק/ענף כללי",
+      "creditGroup":"קבוצת אשראי",
+      "agent":"סוכן"
 
       
 
