add icons add username

--- a/src/translations/he/translation.json
+++ b/src/translations/he/translation.json
@@ -19,10 +19,10 @@
      "siderbar.concentrationOfActions":"ריכוז פעולות",
      "siderbar.logChanges":"לוג שינוים",
      "createCustomer":"צור לקוח",
-     "customerStatus":"סטטוס לקוח",
+     "customerStatus":"סטטוס לקוח:",
      "customerLock":"נעילת לקוח",
-     "firstName":"שם פרטי",
-     "lastName":"שם משפחה",
+     "firstName":"שם פרטי:",
+     "lastName":"שם משפחה:",
      "male":"זכר",
      "female":"נקבה",
      "gander":"מין",
@@ -33,23 +33,36 @@
       "editing":"לערוך",
       "deletion":"מחיקה",
       "save":"שמירה",
-      "dateOfBirth":"תאריך לידה",
-      "idNumber":"מספר זהות",
-      "middleName":"שם אמצעי",
-      "customerNumber":"לקוח מספר",
+      "dateOfBirth":"תאריך לידה:",
+      "identityNumber":"מספר זהות:",
+      "nameIDEmployee":"שם עובד מזהה:",
+      "middleName":"שם אמצעי:",
+      "customerNumber":":לקוח מספר:",
       "customerDetails":"פרטי לקוח",
       "personalDetails":"פרטים אישיים",
-      "othercustomerCondition":"מעמד לקוח אחר",
-      "customerCondition":"מעמד לקוח",
-      "customerType":"סוג לקוח",
+      "othercustomerCondition":"מעמד לקוח אחר:",
+      "customerCondition":"מעמד לקוח:",
+      "customerType":"סוג לקוח:",
       "customers":"לקוחות",
       "viewNoteWhenPerformingAction":"הצגת הערה בעת ביצוע פעולה",
-      "areaOfPracticeOrIndustry":"תחום עסוק/ענף כלכלי",
-      "creditGroup":"קבוצת אשראי",
-      "agent":"סוכן",
-      "identityDetails":"פרטי זהוי",
-      "typeIdentityNumber":"סוג מספר זהות",
-      "typeIdentityNumberOther":"סוג מספר זהות אחר"
+      "areaOfPracticeOrIndustry":"תחום עסוק/ענף כלכלי:",
+      "creditGroup":"קבוצת אשראי:",
+      "agent":"סוכן:",
+      "identityDetails":"פרטי זהוי:",
+      "typeIdentityNumber":"סוג מספר זהות:",
+      "typeIdentityNumberOther":"סוג מספר זהות אחר:",
+      "countryIdentityNumber":"מדינת מספר זהות:",
+      "contactInformation":"פרטי התקשורת:",
+      "address":"כתובת מגורים",
+       "phone":"טלפון:",
+       "houseNumber":"מספר בית",
+       "city":"עיר",
+       "country":"מדינה",
+       "countryPhone":"טלפון מדינה",
+       "email":"דואר אלקטרוני:",
+       "emailAddress":"כתובת דוא'ל:"
+
+     
 
       
 
