--- a/src/translations/he/translation.json
+++ b/src/translations/he/translation.json
@@ -18,6 +18,7 @@
      "siderbar.moneyLaundering":"הלבנת הון",
      "siderbar.concentrationOfActions":"ריכוז פעולות",
      "siderbar.logChanges":"לוג שינוים",
+     "siderbar.homePage":"דף הבית",
      "createCustomer":"צור לקוח",
      "customerStatus":"סטטוס לקוח:",
      "customerLock":"נעילת לקוח",
