add icon from awesome

--- a/src/translations/he/translation.json
+++ b/src/translations/he/translation.json
@@ -7,7 +7,7 @@
      "login.password":"סיסמה",
     "siderbar.customerSearch":"איתור לקוח" ,
      "siderBar.customerDetails":"פרטי לקוח",
-     "siderbar.contact":"יצירת קשר",
+     "siderbar.contactInformation":"פרטי התקשרות",
      "siderbar.representativesOrInvolvedParties":"נציגים/מעורבים",
      "siderbar.obligo":"אובליגו",
      "siderbar.security":"בטחון",
